tests/fixtures/pass/coalesce_infer_result_err.sali
let main(): i32 = Result(_, bool).Err(false) ?? 42
