tests/fixtures/fail/coalesce_infer_result_error_unconstrained.sali
let main(): i32 = Result(_, _).Ok(1) ?? 2
